[package]
name = "dddk_core"
version = "0.2.0"
edition = "2021"
authors = ["Julien TABARY <julien@tabary.net>"]
description = "Tactical DDD framework based on command_bus, event_bus and query_bus. It offers annex feature such as authorization, logging ..."
documentation = "https://github.com/jultabary/4dk-core/tree/main/rust/project/core-rust"
readme = "README.md"
homepage = "https://github.com/jultabary/4dk-core"
license = "Apache-2.0"
keywords = ["ddd", "hexagonal-arch", "ddd-cqrs-framework"]
categories = ["rust-patterns", "web-programming"]
publish = ["crates-io"]

[dependencies]
log = "0.4"

[dev-dependencies]
dddk_macro = "0.2.0"
