[package]
name = "dddk_security"
version = "0.1.0"
edition = "2021"
authors = ["Julien TABARY <julien@tabary.net>"]
description = "Tactical DDD framework based on command_bus, event_bus and query_bus. It offers annex feature such as authorization, logging ..."
documentation = "https://github.com/jultabary/4dk-core/tree/main/rust/project/core-rust"
readme = "README.md"
homepage = "https://github.com/jultabary/4dk-core"
license = "Apache-2.0"
keywords = ["ddd", "hexagonal-architecture", "ddd-cqrs-framework"]
categories = ["rust-patterns", "web-programming"]
publish = false

[dependencies]
dddk_core = { path = "../core-rust" }
