[package]
name = "dddk_security"
version = "0.1.0"
edition = "2021"
authors = ["Julien TABARY <julien@tabary.net>"]
description = "Security module of dddk_core. Impl features regarding command_bus pattern and security"
documentation = "https://github.com/jultabary/4dk-core/tree/main/rust/project/core-rust"
readme = "README.md"
homepage = "https://github.com/jultabary/4dk-core"
license = "Apache-2.0"
keywords = ["ddd", "hexagonal-arch", "ddd-cqrs-framework"]
categories = ["rust-patterns", "web-programming"]
publish = ["crates-io"]

[dependencies]
dddk_core = "0.1.0"

[dev-dependencies]
dddk_macro = { path = "../../project/fourdk-macro" }
